--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <hr class="my-0 bg-dark w-75 mx-auto" />
       <!-- contenido card Izquierda Mostrar Animales -->
       <div id="Animales" class="my-3 p-3 d-flex align-items-start justify-content-start flex-wrap bg-dark">
-        <p class="text-white">aqui se inserta la card de cada animal</p>
+        <p class="text-white"></p>
       </div>
     </div>
 
@@ -90,7 +90,11 @@
   <div class="modal fade" id="exampleModal">
     <div class="modal-dialog modal-dialog-centered w-25" role="document">
       <div class="modal-content bg-dark">
-        <div class="modal-body">...</div>
+        <div class="modal-body">
+          <h5 class="modal-title" id="modalNombre"></h5>
+          <p class="modal-text" id="modalEdad"></p>
+          <p class="modal-text" id="modalComentarios"></p>
+        </div>
       </div>
     </div>
   </div>
