se agrega funcion pagina modal

--- a/index.html
+++ b/index.html
@@ -85,14 +85,16 @@
 
   </div>
 
+  <!-- reproducir sonido animales -->
   <audio id="player" class="d-none"></audio>
 
+  <!-- ventana modal -->
   <div class="modal fade" id="exampleModal">
     <div class="modal-dialog modal-dialog-centered w-25" role="document">
       <div class="modal-content bg-dark">
-        <div class="modal-body">
-          <h5 class="modal-title" id="modalNombre"></h5>
-          <p class="modal-text" id="modalEdad"></p>
+        <div class="modal-body text-center mb-2 text-white">
+          <img src="" class="img-fluid" id="modalImagen" />
+          <p class="modal-text mt-2" id="modalEdad"></p>
           <p class="modal-text" id="modalComentarios"></p>
         </div>
       </div>
